# traq-client-drogoncpp

./: CMakeLists.txt  Helper.cpp  Helper.h  README.md  build.sh
.openapi-generator/: FILES
apis/: ActivityApi.cpp  ActivityApi.h  AuthenticationApi.cpp  AuthenticationApi.h  BotApi.cpp  BotApi.h  ChannelApi.cpp  ChannelApi.h  ClipApi.cpp  ClipApi.h  FileApi.cpp  FileApi.h  GroupApi.cpp  GroupApi.h  MeApi.cpp  MeApi.h  MessageApi.cpp  MessageApi.h  NotificationApi.cpp  NotificationApi.h  Oauth2Api.cpp  Oauth2Api.h  OgpApi.cpp  OgpApi.h  PinApi.cpp  PinApi.h  PublicApi.cpp  PublicApi.h  StampApi.cpp  StampApi.h  StarApi.cpp  StarApi.h  UserApi.cpp  UserApi.h  UserTagApi.cpp  UserTagApi.h  WebhookApi.cpp  WebhookApi.h  WebrtcApi.cpp  WebrtcApi.h
include/traQ/: Client.h
include/traQ/apis/: ActivityApi.h  AuthenticationApi.h  BotApi.h  ChannelApi.h  ClipApi.h  FileApi.h  GroupApi.h  MeApi.h  MessageApi.h  NotificationApi.h  Oauth2Api.h  OgpApi.h  PinApi.h  PublicApi.h  StampApi.h  StarApi.h  UserApi.h  UserTagApi.h  WebhookApi.h  WebrtcApi.h
include/traQ/models/: ActiveOAuth2Token.h  ActivityTimelineMessage.h  Bot.h  BotDetail.h  BotEventLog.h  BotEventResult.h  BotMode.h  BotState.h  BotTokens.h  BotUser.h  Channel.h  ChannelEvent.h  ChannelEventDetail.h  ChannelList.h  ChannelStats.h  ChannelStatsStamp.h  ChannelStatsUser.h  ChannelSubscribeLevel.h  ChannelTopic.h  ChannelViewState.h  ChannelViewer.h  ChildCreatedEvent.h  ClipFolder.h  ClippedMessage.h  DMChannel.h  ExternalProviderUser.h  FileInfo.h  FileInfoThumbnail.h  ForcedNotificationChangedEvent.h  GetBot200Response.h  GetClient200Response.h  GetNotifyCitation.h  LoginSession.h  Message.h  MessageClip.h  MessagePin.h  MessageSearchResult.h  MessageStamp.h  MyChannelViewState.h  MyUserDetail.h  (+82 more)
models/: ActiveOAuth2Token.cpp  ActiveOAuth2Token.h  ActivityTimelineMessage.cpp  ActivityTimelineMessage.h  Bot.cpp  Bot.h  BotDetail.cpp  BotDetail.h  BotEventLog.cpp  BotEventLog.h  BotEventResult.cpp  BotEventResult.h  BotMode.cpp  BotMode.h  BotState.cpp  BotState.h  BotTokens.cpp  BotTokens.h  BotUser.cpp  BotUser.h  Channel.cpp  Channel.h  ChannelEvent.cpp  ChannelEvent.h  ChannelEventDetail.cpp  ChannelEventDetail.h  ChannelList.cpp  ChannelList.h  ChannelStats.cpp  ChannelStats.h  ChannelStatsStamp.cpp  ChannelStatsStamp.h  ChannelStatsUser.cpp  ChannelStatsUser.h  ChannelSubscribeLevel.cpp  ChannelSubscribeLevel.h  ChannelTopic.cpp  ChannelTopic.h  ChannelViewState.cpp  ChannelViewState.h  (+202 more)
src/: Helper.cpp
src/apis/: ActivityApi.cpp  AuthenticationApi.cpp  BotApi.cpp  ChannelApi.cpp  ClipApi.cpp  FileApi.cpp  GroupApi.cpp  MeApi.cpp  MessageApi.cpp  NotificationApi.cpp  Oauth2Api.cpp  OgpApi.cpp  PinApi.cpp  PublicApi.cpp  StampApi.cpp  StarApi.cpp  UserApi.cpp  UserTagApi.cpp  WebhookApi.cpp  WebrtcApi.cpp
src/models/: ActiveOAuth2Token.cpp  ActivityTimelineMessage.cpp  Bot.cpp  BotDetail.cpp  BotEventLog.cpp  BotEventResult.cpp  BotMode.cpp  BotState.cpp  BotTokens.cpp  BotUser.cpp  Channel.cpp  ChannelEvent.cpp  ChannelEventDetail.cpp  ChannelList.cpp  ChannelStats.cpp  ChannelStatsStamp.cpp  ChannelStatsUser.cpp  ChannelSubscribeLevel.cpp  ChannelTopic.cpp  ChannelViewState.cpp  ChannelViewer.cpp  ChildCreatedEvent.cpp  ClipFolder.cpp  ClippedMessage.cpp  DMChannel.cpp  ExternalProviderUser.cpp  FileInfo.cpp  FileInfoThumbnail.cpp  ForcedNotificationChangedEvent.cpp  GetBot200Response.cpp  GetClient200Response.cpp  GetNotifyCitation.cpp  LoginSession.cpp  Message.cpp  MessageClip.cpp  MessagePin.cpp  MessageSearchResult.cpp  MessageStamp.cpp  MyChannelViewState.cpp  MyUserDetail.cpp  (+82 more)
traQ/: Client.h  Helper.cpp  Helper.h
traQ/apis/: ActivityApi.cpp  ActivityApi.h  AuthenticationApi.cpp  AuthenticationApi.h  BotApi.cpp  BotApi.h  ChannelApi.cpp  ChannelApi.h  ClipApi.cpp  ClipApi.h  FileApi.cpp  FileApi.h  GroupApi.cpp  GroupApi.h  MeApi.cpp  MeApi.h  MessageApi.cpp  MessageApi.h  NotificationApi.cpp  NotificationApi.h  Oauth2Api.cpp  Oauth2Api.h  OgpApi.cpp  OgpApi.h  PinApi.cpp  PinApi.h  PublicApi.cpp  PublicApi.h  StampApi.cpp  StampApi.h  StarApi.cpp  StarApi.h  UserApi.cpp  UserApi.h  UserTagApi.cpp  UserTagApi.h  WebhookApi.cpp  WebhookApi.h  WebrtcApi.cpp  WebrtcApi.h
traQ/models/: ActiveOAuth2Token.cpp  ActiveOAuth2Token.h  ActivityTimelineMessage.cpp  ActivityTimelineMessage.h  Bot.cpp  Bot.h  BotDetail.cpp  BotDetail.h  BotEventLog.cpp  BotEventLog.h  BotEventResult.cpp  BotEventResult.h  BotMode.cpp  BotMode.h  BotState.cpp  BotState.h  BotTokens.cpp  BotTokens.h  BotUser.cpp  BotUser.h  Channel.cpp  Channel.h  ChannelEvent.cpp  ChannelEvent.h  ChannelEventDetail.cpp  ChannelEventDetail.h  ChannelList.cpp  ChannelList.h  ChannelStats.cpp  ChannelStats.h  ChannelStatsStamp.cpp  ChannelStatsStamp.h  ChannelStatsUser.cpp  ChannelStatsUser.h  ChannelSubscribeLevel.cpp  ChannelSubscribeLevel.h  ChannelTopic.cpp  ChannelTopic.h  ChannelViewState.cpp  ChannelViewState.h  (+204 more)
